<resources>
    <string name="app_name">Programming Placement MCQ</string>
    <string name="my_quiz">Programming Placement MCQ</string>
    <string name="select_quiz">SELECT QUIZ</string>
    <string name="basic">Basic</string>
    <string name="relational_database">Relational Database</string>
    <string name="normal_form">Normal Form</string>
    <string name="transaction">Transaction</string>
    <string name="indexing">Indexing</string>
    <string name="concurrency">Concurrency</string>
    <string name="data_type">Data Type</string>
    <string name="c_and_c">C and C++</string>
    <string name="about_c">About C++</string>
    <string name="data_structure">Data Structure</string>
    <string name="class_and_object">Class and Object</string>
    <string name="string">String</string>
    <string name="pointer">Pointer</string>
    <string name="function">Function</string>
    <string name="exception">Exception</string>
    <string name="servlet">Servlet</string>
    <string name="about_javascript">About JavaScript</string>
    <string name="web_and_server">Web and Server</string>
    <string name="scripting">Scripting</string>
    <string name="error">Error</string>
    <string name="quiz_1">Quiz 1</string>
    <string name="quiz_2">Quiz 2</string>
    <string name="list">List</string>
    <string name="about_python">About Python</string>
    <string name="package1">Package</string>
    <string name="no_question_available">No Question Available</string>
    <string name="soon_it_will_be_available">Soon it will be available</string>
    <string name="avatar">Avatar</string>
    <string name="logout">Logout</string>
    <string name="java">Java</string>
    <string name="c">C++</string>
    <string name="python">Python</string>
    <string name="javascript">JavaScript</string>
    <string name="dbms">DBMS</string>
    <string name="computer_networking">Computer Networking</string>
    <string name="node_js">Node js</string>
    <string name="react">React</string>
    <string name="are_you_sure_to_exit">Are you sure to exit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="question">Question</string>
    <string name="option1">option1</string>
    <string name="option2">option2</string>
    <string name="option3">option3</string>
    <string name="option4">option4</string>
    <string name="ans">Ans</string>
    <string name="osi_model">Osi Model</string>
    <string name="application">Application</string>
    <string name="intro">Intro</string>
    <string name="physical_layer">Physical Layer</string>
    <string name="transport_layer">Transport Layer</string>
    <string name="network_layer">Network Layer</string>
    <string name="dns">DNS</string>
    <string name="dhcp">DHCP</string>
    <string name="http">HTTP</string>
    <string name="smtp">SMTP</string>
    <string name="snmp">SNMP</string>
    <string name="ssh">SSH</string>
    <string name="ipv4">IPV4</string>
    <string name="ipv6">IPV6</string>
    <string name="www">WWW</string>
    <string name="ip_security">IP Security</string>
    <string name="vpn">VPN</string>
    <string name="wireless">Wireless</string>
</resources>